--- a/gumandhealth.client/src/index.html
+++ b/gumandhealth.client/src/index.html
@@ -1,61 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <meta charset="UTF-8" />
-    <meta name="description" content="Yoga Studio Template" />
-    <meta name="keywords" content="Yoga, unica, creative, html" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>CrossFit | Template</title>
+<head>
+  <meta charset="utf-8" />
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <meta charset="UTF-8" />
+  <meta name="description" content="Yoga Studio Template" />
+  <meta name="keywords" content="Yoga, unica, creative, html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>CrossFit | Template</title>
 
-    <!-- Google Font -->
-    <link
-      href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Oswald:400,500,600,700&display=swap"
-      rel="stylesheet"
-    />
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap"
+        rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Oswald:400,500,600,700&display=swap"
+        rel="stylesheet" />
 
-    <!-- Css Styles -->
-    <link
-      rel="stylesheet"
-      href="assets/css/bootstrap.min.css"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="assets/css/font-awesome.min.css"
-      type="text/css"
-    />
-    <link rel="stylesheet" href="assets/css/flaticon.css" type="text/css" />
-    <link
-      rel="stylesheet"
-      href="assets/css/owl.carousel.min.css"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="assets/css/magnific-popup.css"
-      type="text/css"
-    />
-    <link rel="stylesheet" href="assets/css/slicknav.min.css" type="text/css" />
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-  </head>
-  <body>
-    <app-root></app-root>
-    <!-- Js Plugins -->
-    <script src="assets/js/jquery-3.3.1.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="assets/js/jquery.slicknav.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/circle-progress.min.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
+  <!-- Css Styles -->
+  <link rel="stylesheet"
+        href="assets/css/bootstrap.min.css"
+        type="text/css" />
+  <link rel="stylesheet"
+        href="assets/css/font-awesome.min.css"
+        type="text/css" />
+  <link rel="stylesheet" href="assets/css/flaticon.css" type="text/css" />
+  <link rel="stylesheet"
+        href="assets/css/owl.carousel.min.css"
+        type="text/css" />
+  <link rel="stylesheet"
+        href="assets/css/magnific-popup.css"
+        type="text/css" />
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="assets/css/slicknav.min.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+</head>
+<body>
+  <app-root></app-root>
+  <!-- Js Plugins -->
+  <script src="assets/js/jquery-3.3.1.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="assets/js/jquery.slicknav.js"></script>
+  <script src="assets/js/owl.carousel.min.js"></script>
+  <script src="assets/js/circle-progress.min.js"></script>
+  <script src="assets/js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+</body>
 </html>
