--- a/gumandhealth.client/src/index.html
+++ b/gumandhealth.client/src/index.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>CrossFit | Template</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap"
