--- a/gumandhealth.client/src/index.html
+++ b/gumandhealth.client/src/index.html
@@ -37,6 +37,8 @@
 
   <link rel="stylesheet" href="assets/css/slicknav.min.css" type="text/css" />
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
   <app-root></app-root>
@@ -49,6 +51,8 @@
   <script src="assets/js/circle-progress.min.js"></script>
   <script src="assets/js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
